@@ -6,6 +6,7 @@ development home at https://github.com/projectestac/prestatgeria
 Changes in progress
 ---------------------------------------------------------------------------------------
 - works.php: Added check for data directory
+- Fixed update of permissions in book local users
 
 
 v16.01.25
